tests/invalid/EndOfFile_Invalid_1.whiley
import whiley.lang.System

method main(System.Console console):
    int i = 1
    i++
